# wngc

./: .gitignore  Cargo.toml  README.md  flake.nix  main.S
src/: args.rs  codegen.rs  ftable.rs  grammar.lalrpop  imc.rs  main.rs  stable.rs  ty.rs  vtable.rs
src/ast/: agg.rs  expr.rs  func.rs  mod.rs  stat.rs
src/intrinsics/: funcs.rs
