[package]
name = "wngc"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm17-0"] }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
thiserror = "2.0.2"
llvm-sys-170 = { package = "llvm-sys", version = "170.2.0", features = [
  "prefer-static",
] }

[build-dependencies]
lalrpop = "0.22.0"
